--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "config": "^4.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mysql": "^2.18.1"
   }
